--- a/lib/web/templates/layout/components/nav.html.eex
+++ b/lib/web/templates/layout/components/nav.html.eex
@@ -1,48 +1,48 @@
-<nav id="header" class="fixed w-full z-30 top-0 text-white">
-  <div class="w-full container mx-auto flex flex-wrap items-center justify-between mt-0 py-2">
-    <div class="pl-4 flex items-center">
-      <a class="toggleColour text-white no-underline hover:no-underline font-bold text-2xl lg:text-4xl"  href="<%= Routes.page_path(@conn, :index) %>">
+<nav id="header" class="fixed top-0 z-30 w-full text-white">
+  <div class="container flex flex-wrap items-center justify-between w-full py-2 mx-auto mt-0">
+    <div class="flex items-center pl-4">
+      <a class="text-2xl font-bold text-white no-underline toggleColour hover:no-underline lg:text-4xl"  href="<%= Routes.page_path(@conn, :index) %>">
         <%= img_tag(Routes.static_path(@conn, "/images/logo.svg"), class: "h-8 fill-current inline") %>
         <%= gettext("Workpermit") %>
       </a>
     </div>
-    <div class="block lg:hidden pr-4">
-      <button id="nav-toggle" class="flex items-center px-3 py-2 border bg-transparent hover:bg-transparent rounded text-gray-medium border-gray-medium hover:text-gray-darker hover:border-teal-500 appearance-none focus:outline-none">
-        <svg class="fill-current h-3 w-3" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><title>Menu</title><path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"/></svg>
+    <div class="block pr-4 lg:hidden">
+      <button id="nav-toggle" class="flex items-center px-3 py-2 bg-transparent border rounded appearance-none hover:bg-transparent text-gray-medium border-gray-medium hover:text-gray-darker hover:border-teal-500 focus:outline-none">
+        <svg class="w-3 h-3 fill-current" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><title>Menu</title><path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"/></svg>
       </button>
     </div>
-    <div class="w-full flex-grow lg:flex lg:items-center lg:w-auto hidden lg:block mt-2 lg:mt-0 bg-white lg:bg-transparent text-black p-4 lg:p-0 z-20" id="nav-content">
-      <ul class="list-reset lg:flex justify-end flex-1 items-center">
+    <div class="z-20 flex-grow hidden w-full p-4 mt-2 text-black bg-white lg:flex lg:items-center lg:w-auto lg:block lg:mt-0 lg:bg-transparent lg:p-0" id="nav-content">
+      <ul class="items-center justify-end flex-1 list-reset lg:flex">
         <li class="mr-3">
           <%= link gettext("Permits"), to: Routes.permit_path(@conn, :index), class: "inline-block font-bold no-underline hover:text-underline py-2 px-4" %>
         </li>
-        <%= if signed_in?(@conn) do %>
+        <%= if Pow.Plug.current_user(@conn) do %>
           <li class="mr-3">
-            <%= link gettext("Sign out"), to: Routes.session_path(@conn, :delete), method: :delete, class: "inline-block no-underline hover:text-underline py-2 px-4" %>
+            <%= link gettext("Sign out"), to: Routes.pow_session_path(@conn, :delete), method: :delete, class: "inline-block no-underline hover:text-underline py-2 px-4" %>
           </li>
         <% else %>
           <li class="mr-3">
-            <%= link gettext("Log in"), to: Routes.session_path(@conn, :create),class: "inline-block no-underline hover:text-underline py-2 px-4" %>
+            <%= link gettext("Log in"), to: Routes.pow_session_path(@conn, :new),class: "inline-block no-underline hover:text-underline py-2 px-4" %>
           </li>
           <li class="mr-3">
-            <%= link gettext("Sign up"), to: Routes.user_path(@conn, :new),class: "inline-block  no-underline hover:text-underline py-2 px-4" %>
+            <%= link gettext("Sign up"), to: Routes.pow_registration_path(@conn, :new),class: "inline-block  no-underline hover:text-underline py-2 px-4" %>
           </li>
         <% end %>
       </ul>
       <!--Language dropdown -->
-      <div class="group relative">
-        <div class=" cursor-pointer flex group-hover:border group-hover:border-b-0 group-hover:border-grey-light items-center px-2 py-1 rounded-t-lg ">
+      <div class="relative group">
+        <div class="flex items-center px-2 py-1 rounded-t-lg cursor-pointer  group-hover:border group-hover:border-b-0 group-hover:border-grey-light">
           <%= img_tag(Routes.static_path(@conn, "/images/globe.svg"), id: "globe", class: "h-5 inline invert") %>&nbsp;
           <%= gettext("Language") %>
-          <svg class="fill-current h-4 w-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z"/></svg>
+          <svg class="w-4 h-4 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z"/></svg>
         </div>
-        <div class="items-center text-black absolute border rounded-lg p-1 bg-white p-2 invisible group-hover:visible w-full">
+        <div class="absolute items-center invisible w-full p-1 p-2 text-black bg-white border rounded-lg group-hover:visible">
           <a class="px-4 py-2 block text-black hover:bg-grey-lighter <%= get_active_locale_class("en") %>" href="?locale=en">English</a>
           <a class="px-4 py-2 block text-black hover:bg-grey-lighter <%= get_active_locale_class("pl") %>" href="?locale=pl">Polski</a>
         </div>
       </div>
-      <!--button id="navAction" class="mx-auto lg:mx-0 hover:underline bg-white text-gray-darker font-bold rounded-full mt-4 lg:mt-0 py-4 px-8 shadow opacity-75">Action</button-->
+      <!--button id="navAction" class="px-8 py-4 mx-auto mt-4 font-bold bg-white rounded-full shadow opacity-75 lg:mx-0 hover:underline text-gray-darker lg:mt-0">Action</button-->
     </div>
   </div>
-  <hr class="border-b border-gray-lighter my-0 opacity-25 py-0" />
+  <hr class="py-0 my-0 border-b opacity-25 border-gray-lighter" />
 </nav>
