fix some failing tests

--- a/lib/web/templates/pow/registration/edit.html.eex
+++ b/lib/web/templates/pow/registration/edit.html.eex
@@ -19,9 +19,9 @@
   <%= password_input f, :password %>
   <%= error_tag f, :password %>
 
-  <%= label f, :confirm_password %>
-  <%= password_input f, :confirm_password %>
-  <%= error_tag f, :confirm_password %>
+  <%= label f, :password_confirmation %>
+  <%= password_input f, :password_confirmation %>
+  <%= error_tag f, :password_confirmation %>
 
   <div>
     <%= submit "Update" %>
