--- a/lib/web/templates/layout/components/nav.html.eex
+++ b/lib/web/templates/layout/components/nav.html.eex
@@ -3,7 +3,11 @@
     <div class="flex items-center pl-4">
       <a class="text-2xl font-bold text-white no-underline toggleColour hover:no-underline lg:text-4xl"  href="<%= Routes.page_path(@conn, :index) %>">
         <%= img_tag(Routes.static_path(@conn, "/images/logo.svg"), class: "h-8 fill-current inline") %>
-        <%= gettext("Workpermit") %>
+        <%= if @tenant do %>
+          <%= @tenant %>
+        <% else %>
+          <%= gettext("Workpermit") %>
+        <% end %>
       </a>
     </div>
     <div class="block pr-4 lg:hidden">
@@ -31,7 +35,7 @@
       </ul>
       <!--Language dropdown -->
       <div class="relative group">
-        <div class="flex items-center px-2 py-1 rounded-t-lg cursor-pointer  group-hover:border group-hover:border-b-0 group-hover:border-grey-light">
+        <div class="flex items-center px-2 py-1 rounded-t-lg cursor-pointer group-hover:border group-hover:border-b-0 group-hover:border-grey-light">
           <%= img_tag(Routes.static_path(@conn, "/images/globe.svg"), id: "globe", class: "h-5 inline invert") %>&nbsp;
           <%= gettext("Language") %>
           <svg class="w-4 h-4 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z"/></svg>
