--- a/lib/web/templates/layout/components/head.html.eex
+++ b/lib/web/templates/layout/components/head.html.eex
@@ -14,4 +14,5 @@
 <meta name="theme-color" content="#415bba">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="csrf" content="<%= Plug.CSRFProtection.get_csrf_token() %>">
+<%= csrf_meta_tag() %>
 <title><%= gettext("Workpermit") %></title>
