--- a/lib/web/templates/permit/index.html.eex
+++ b/lib/web/templates/permit/index.html.eex
@@ -1,8 +1,8 @@
-<div class="w-full max-w-6xl pt-16 mx-auto content-center flex-1 mb-4">
+<div class="content-center flex-1 w-full max-w-6xl pt-16 mx-auto mb-4">
 
   <div class="flex justify-between">
     <div class="flex justify-between">
-      <h1 class="c-h3 p-4 text-gray-darker">
+      <h1 class="p-4 c-h3 text-gray-darker">
         <%= link gettext("Permits List"), to: Routes.permit_path(@conn, :index), class: "" %>
       </h1>
       <div class ="flex content-center">
@@ -18,7 +18,7 @@
     </div>
   </div>
 
-  <table class = "bg-white mx-auto w-full shadow-md rounded px-8 pt-6 pb-8 mb-4 table">
+  <table class = "table w-full px-8 pt-6 pb-8 mx-auto mb-4 bg-white rounded shadow-md">
     <thead>
       <tr>
         <th><%= gettext("Category") %></th>
@@ -80,11 +80,11 @@
       <% end %>
     </tbody>
   </table>
-  <%= if @paginate.total_pages > 1 do %>
-    <% classes = [class: "m-1 rounded border-2 p-2 font-bold", normal_class: "text-gray-dark border-gray-dark", active_class: "bg-primary-medium text-gray-darker border-gray-darker", disabled_class: "bg-gray-lighter text-gray-light"] %>
+  <!--%= if @paginate.total_pages > 1 do %-->
+    <!--% classes = [class: "m-1 rounded border-2 p-2 font-bold", normal_class: "text-gray-dark border-gray-dark", active_class: "bg-primary-medium text-gray-darker border-gray-darker", disabled_class: "bg-gray-lighter text-gray-light"] %>
     <div class="flex justify-center">
-      <%= turbo_pagination_custom(@conn, @paginate, classes) %>
+      <!--%= turbo_pagination_custom(@conn, @paginate, classes) %>
     </div>
-  <% end %> 
+  <--% end %--> 
 </div>
 
