--- a/lib/web/templates/layout/components/nav.html.eex
+++ b/lib/web/templates/layout/components/nav.html.eex
@@ -1,7 +1,7 @@
 <nav id="header" class="fixed top-0 z-30 w-full text-white">
   <div class="container flex flex-wrap items-center justify-between w-full py-2 mx-auto mt-0">
     <div class="flex items-center pl-4">
-      <a class="text-2xl font-bold text-white no-underline toggleColour hover:no-underline lg:text-4xl"  href="<%= Routes.page_path(@conn, :index) %>">
+      <a class="text-2xl font-bold no-underline text-gray-darker toggleColour hover:no-underline lg:text-4xl"  href="<%= Routes.page_path(@conn, :index) %>">
         <%= img_tag(Routes.static_path(@conn, "/images/logo.svg"), class: "h-8 fill-current inline") %>
         <%= if @tenant do %>
           <%= @tenant %>
@@ -34,15 +34,27 @@
         <% end %>
       </ul>
       <!--Language dropdown -->
-      <div class="relative group">
-        <div class="flex items-center px-2 py-1 rounded-t-lg cursor-pointer group-hover:border group-hover:border-b-0 group-hover:border-grey-light">
+      <div x-data="{ isOpen: false }" class="relative group">
+        <div @click="isOpen = !isOpen" class="flex items-center px-2 py-1 rounded-t-lg cursor-pointer group-hover:border group-hover:border-b-0 group-hover:border-grey-light">
           <%= img_tag(Routes.static_path(@conn, "/images/globe.svg"), id: "globe", class: "h-5 inline invert") %>&nbsp;
           <%= gettext("Language") %>
-          <svg class="w-4 h-4 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z"/></svg>
+          <svg class="w-4 h-4 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
+            <path d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z"/>
+          </svg>
         </div>
-        <div class="absolute items-center invisible w-full p-1 p-2 text-black bg-white border rounded-lg group-hover:visible">
-          <a class="px-4 py-2 block text-black hover:bg-grey-lighter <%= get_active_locale_class("en") %>" href="?locale=en">English</a>
-          <a class="px-4 py-2 block text-black hover:bg-grey-lighter <%= get_active_locale_class("pl") %>" href="?locale=pl">Polski</a>
+        <div
+          class="absolute items-center w-full p-1 p-2 text-black bg-white border rounded-lg transform"
+          x-show="isOpen"
+          @click.away="isOpen = false"
+          x-transition:enter="transition-all ease-out duration-300"
+          x-transition:enter-start="opacity-0 transform scale-75"
+          x-transition:enter-end="opacity-100 transform scale-100"
+          x-transition:leave="transition-all ease-in duration-300"
+          x-transition:leave-start="opacity-100 transform scale-100"
+          x-transition:leave-end="opacity-0 transform scale-75"
+          >
+          <a class="px-4 py-2 block hover:bg-grey-lighter <%= get_active_locale_class("en") %>" href="?locale=en">English</a>
+          <a class="px-4 py-2 block hover:bg-grey-lighter <%= get_active_locale_class("pl") %>" href="?locale=pl">Polski</a>
         </div>
       </div>
       <!--button id="navAction" class="px-8 py-4 mx-auto mt-4 font-bold bg-white rounded-full shadow opacity-75 lg:mx-0 hover:underline text-gray-darker lg:mt-0">Action</button-->
