--- a/lib/web/templates/layout/app.html.eex
+++ b/lib/web/templates/layout/app.html.eex
@@ -6,7 +6,7 @@
   </head>
     <%= render "components/head.html", conn: @conn %>
   <body class="flex flex-col h-full leading-normal tracking-normal bg-secondary-lighter" style="font-family: system;">
-    <%= render "components/nav.html", conn: @conn, tenant: assigns[:current_tenant] %>
+    <%= render "components/nav.html", conn: @conn, tenant: assigns[:tenant], text_color: Web.CSS.nav_text_color(@conn) %>
     <%= Enum.map(get_flash(@conn), fn {type, message} -> %>
       <%= render "components/flash.html", type: type, message: message %>
     <% end) %>
