--- a/lib/web/templates/layout/components/nav.html.eex
+++ b/lib/web/templates/layout/components/nav.html.eex
@@ -1,7 +1,7 @@
-<nav id="header" class="fixed top-0 z-30 w-full text-white">
+<nav id="header" class="fixed top-0 z-30 w-full toggleColour <%= @text_color %>">
   <div class="container flex flex-wrap items-center justify-between w-full py-2 mx-auto mt-0">
     <div class="flex items-center pl-4">
-      <a class="text-2xl font-bold no-underline text-gray-darker toggleColour hover:no-underline lg:text-4xl"  href="<%= Routes.page_path(@conn, :index) %>">
+      <a class="text-2xl font-bold no-underline hover:no-underline lg:text-4xl"  href="<%= Routes.page_path(@conn, :index) %>">
         <%= img_tag(Routes.static_path(@conn, "/images/logo.svg"), class: "h-8 fill-current inline") %>
         <%= if @tenant do %>
           <%= @tenant %>
@@ -15,7 +15,7 @@
         <svg class="w-3 h-3 fill-current" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><title>Menu</title><path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"/></svg>
       </button>
     </div>
-    <div class="z-20 flex-grow hidden w-full p-4 mt-2 text-black bg-white lg:flex lg:items-center lg:w-auto lg:block lg:mt-0 lg:bg-transparent lg:p-0" id="nav-content">
+    <div class="z-20 flex-grow hidden w-full p-4 mt-2 bg-white lg:flex lg:items-center lg:w-auto lg:block lg:mt-0 lg:bg-transparent lg:p-0" id="nav-content">
       <ul class="items-center justify-end flex-1 list-reset lg:flex">
         <li class="mr-3">
           <%= link gettext("Permits"), to: Routes.permit_path(@conn, :index), class: "inline-block font-bold no-underline hover:text-underline py-2 px-4" %>
