--- a/lib/web/templates/page/index.html.eex
+++ b/lib/web/templates/page/index.html.eex
@@ -1,25 +1,29 @@
 <!--Hero-->
 <div class="pt-24">
-  <div class="container flex flex-col flex-wrap items-center md:flex-row mx-auto px-3">
+  <div class="container flex flex-col flex-wrap items-center px-3 mx-auto md:flex-row">
     <!--Left Col-->
-    <div class="flex flex-col items-start justify-center md:text-left md:w-2/5 text-center w-full">
-      <p class="tracking-loose uppercase w-full">
-        <h1 class="font-bold leading-tight my-4 text-5xl">
+    <div class="flex flex-col items-start justify-center w-full text-center md:text-left md:w-2/5">
+      <p class="w-full uppercase tracking-loose">
+        <h1 class="my-4 text-5xl font-bold leading-tight">
           <%= gettext("Workpermit tracker") %>
         </h1>
-        <p class="leading-normal mb-8 text-2xl">
+        <p class="mb-8 text-2xl leading-normal">
           <%= gettext("Create and track your workpermits in an dedicated app") %>
         </p>
-        <button class="bg-white font-bold hover:underline lg:mx-0 mx-auto my-6 px-8 py-4 rounded-full shadow-lg text-gray-darker">Subscribe</button>
+        <%= link to: Routes.pow_registration_path(@conn, :new) do %>
+          <button class="px-8 py-4 mx-auto my-6 font-bold bg-white rounded-full shadow-lg hover:underline lg:mx-0 text-gray-darker">
+            <%= gettext("Sign up") %>
+          </button>
+        <% end %>
     </div>
     <!--Right Col-->
-    <div class="md:w-3/5 py-6 text-center w-full">
+    <div class="w-full py-6 text-center md:w-3/5">
       <%= img_tag(Routes.static_path(@conn, "/images/engineer.svg"), class: "w-full md:w-4/5 mirror") %>
     </div>
   </div>
 </div>
 <!--waves-->
-<div class="-mt-12 lg:-mt-24 relative">
+<div class="relative -mt-12 lg:-mt-24">
   <svg viewBox="0 0 1428 174" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
     <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
     <g transform="translate(-2.000000, 44.000000)" fill="#FFFFFF" fill-rule="nonzero">
@@ -34,164 +38,164 @@
   </svg>
 </div>
 <!-- section 1 -->
-<section class="bg-white border-b py-8 bg-white">
-  <div class="container m-8 max-w-5xl mx-auto">
-    <h1 class="font-bold leading-tight my-2 text-5xl text-center text-gray-darker w-full"><%= gettext("Tired of") %></h1>
-    <div class="mb-4 w-full">
-      <div class="gradient h-1 mx-auto my-0 opacity-25 py-0 rounded-t w-64"></div>
+<section class="py-8 bg-white border-b">
+  <div class="container max-w-5xl m-8 mx-auto">
+    <h1 class="w-full my-2 text-5xl font-bold leading-tight text-center text-gray-darker"><%= gettext("Tired of") %></h1>
+    <div class="w-full mb-4">
+      <div class="w-64 h-1 py-0 mx-auto my-0 rounded-t opacity-25 gradient"></div>
     </div>
     <div class="flex flex-wrap">
       <!--Left Col-->
-      <div class="mt-6 p-6 sm:w-1/2 w-5/6">
-        <h3 class="text-3xl text-gray-darker font-bold leading-none mb-3 mt-6"><%= gettext("Writing the same permits every day") %></h3>
+      <div class="w-5/6 p-6 mt-6 sm:w-1/2">
+        <h3 class="mt-6 mb-3 text-3xl font-bold leading-none text-gray-darker"><%= gettext("Writing the same permits every day") %></h3>
         <p class="text-gray-dark">
           <%= gettext("Keeping track of numbering, remembering all the names, checking the same boxes over and over again") %><br /><br />
         </p>
       </div>
       <!--right Col-->
-      <div class="w-full sm:w-1/2 p-6">
+      <div class="w-full p-6 sm:w-1/2">
         <%= img_tag(Routes.static_path(@conn, "/images/multitasking.svg"), class: "w-5/6 sm:h-64 p-6 mt-6") %>
       </div>
     </div>
     <!--left Col-->
-    <div class="flex flex-wrap flex-row-reverse">	
-      <div class="mt-6 p-6 sm:w-1/2 w-full">
+    <div class="flex flex-row-reverse flex-wrap">	
+      <div class="w-full p-6 mt-6 sm:w-1/2">
         <div class="align-middle">
-          <h3 class="font-bold leading-none mb-3 mt-6 text-3xl text-gray-darker"><%= gettext("Let the computer do the job for you") %></h3>
+          <h3 class="mt-6 mb-3 text-3xl font-bold leading-none text-gray-darker"><%= gettext("Let the computer do the job for you") %></h3>
           <p class="text-gray-dark"><%= gettext("With a few mouse clicks you can have ready made  work permits. With name auto completion, auto-numbering and custom templates") %></p>
         </div>
       </div>
       <!--right Col-->
-      <div class="w-full sm:w-1/2 p-6">
+      <div class="w-full p-6 sm:w-1/2">
         <%= img_tag(Routes.static_path(@conn, "/images/checking_boxes.svg"), class: "w-5/6 sm:h-64 p-6 mt-6") %>
       </div>
     </div>
     <!--Left Col-->
     <div class="flex flex-wrap">	
-      <div class="mt-6 p-6 sm:w-1/2 w-5/6">
-        <h3 class="font-bold leading-none mb-3 mt-6 text-3xl text-gray-darker"><%= gettext("Keep track who is still working") %></h3>
+      <div class="w-5/6 p-6 mt-6 sm:w-1/2">
+        <h3 class="mt-6 mb-3 text-3xl font-bold leading-none text-gray-darker"><%= gettext("Keep track who is still working") %></h3>
         <p class="text-gray-dark">
           <%= gettext("How long will it take to finish. When you need to check if it's done correctly") %><br /><br />
         </p>
       </div>
       <!--right Col-->
-      <div class="p-6 sm:w-1/2 w-full">
+      <div class="w-full p-6 sm:w-1/2">
         <%= img_tag(Routes.static_path(@conn, "/images/in_sync.svg"), class: "w-5/6 sm:h-64 p-6 mt-6") %>
       </div>
     </div>
     </div>
   </div>
 </section>
-<!--section class="bg-white border-b py-8">
-  <div class="container mx-auto flex flex-wrap pt-4 pb-12">
+<!--section class="py-8 bg-white border-b">
+  <div class="container flex flex-wrap pt-4 pb-12 mx-auto">
     <h1 class="w-full my-2 text-5xl font-bold leading-tight text-center text-gray-darker">Title</h1>
     <div class="w-full mb-4">	
-      <div class="h-1 mx-auto gradient w-64 opacity-25 my-0 py-0 rounded-t"></div>
+      <div class="w-64 h-1 py-0 mx-auto my-0 rounded-t opacity-25 gradient"></div>
     </div>
-    <div class="w-full md:w-1/3 p-6 flex flex-col flex-grow flex-shrink">
-      <div class="flex-1 bg-white rounded-t rounded-b-none overflow-hidden shadow">
+    <div class="flex flex-col flex-grow flex-shrink w-full p-6 md:w-1/3">
+      <div class="flex-1 overflow-hidden bg-white rounded-t rounded-b-none shadow">
         <a href="#" class="flex flex-wrap no-underline hover:no-underline">
-          <p class="w-full text-gray-medium text-xs md:text-sm px-6">xGETTING STARTED</p>
-          <div class="w-full font-bold text-xl text-gray-darker px-6">Lorem ipsum dolor sit amet.</div>
-          <p class="text-gray-darker text-base px-6 mb-5">
+          <p class="w-full px-6 text-xs text-gray-medium md:text-sm">xGETTING STARTED</p>
+          <div class="w-full px-6 text-xl font-bold text-gray-darker">Lorem ipsum dolor sit amet.</div>
+          <p class="px-6 mb-5 text-base text-gray-darker">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam at ipsum eu nunc commodo posuere et sit amet ligula. 
           </p>
         </a>
       </div>
-      <div class="flex-none mt-auto bg-white rounded-b rounded-t-none overflow-hidden shadow p-6">
+      <div class="flex-none p-6 mt-auto overflow-hidden bg-white rounded-t-none rounded-b shadow">
         <div class="flex items-center justify-start">
-          <button class="mx-auto lg:mx-0 hover:underline gradient text-white font-bold rounded-full my-6 py-4 px-8 shadow-lg">Action</button>
+          <button class="px-8 py-4 mx-auto my-6 font-bold text-white rounded-full shadow-lg lg:mx-0 hover:underline gradient">Action</button>
         </div>
       </div>
     </div>
-    <div class="w-full md:w-1/3 p-6 flex flex-col flex-grow flex-shrink">
-      <div class="flex-1 bg-white rounded-t rounded-b-none overflow-hidden shadow">
+    <div class="flex flex-col flex-grow flex-shrink w-full p-6 md:w-1/3">
+      <div class="flex-1 overflow-hidden bg-white rounded-t rounded-b-none shadow">
         <a href="#" class="flex flex-wrap no-underline hover:no-underline">
-          <p class="w-full text-gray-medium text-xs md:text-sm px-6">xGETTING STARTED</p>
-          <div class="w-full font-bold text-xl text-gray-darker px-6">Lorem ipsum dolor sit amet.</div>
-          <p class="text-gray-darker text-base px-6 mb-5">
+          <p class="w-full px-6 text-xs text-gray-medium md:text-sm">xGETTING STARTED</p>
+          <div class="w-full px-6 text-xl font-bold text-gray-darker">Lorem ipsum dolor sit amet.</div>
+          <p class="px-6 mb-5 text-base text-gray-darker">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam at ipsum eu nunc commodo posuere et sit amet ligula. 
           </p>
         </a>
       </div>
-      <div class="flex-none mt-auto bg-white rounded-b rounded-t-none overflow-hidden shadow p-6">
+      <div class="flex-none p-6 mt-auto overflow-hidden bg-white rounded-t-none rounded-b shadow">
         <div class="flex items-center justify-center">
-          <button class="mx-auto lg:mx-0 hover:underline gradient text-white font-bold rounded-full my-6 py-4 px-8 shadow-lg">Action</button>
+          <button class="px-8 py-4 mx-auto my-6 font-bold text-white rounded-full shadow-lg lg:mx-0 hover:underline gradient">Action</button>
         </div>
       </div>
     </div>
-    <div class="w-full md:w-1/3 p-6 flex flex-col flex-grow flex-shrink">
-      <div class="flex-1 bg-white rounded-t rounded-b-none overflow-hidden shadow">
+    <div class="flex flex-col flex-grow flex-shrink w-full p-6 md:w-1/3">
+      <div class="flex-1 overflow-hidden bg-white rounded-t rounded-b-none shadow">
         <a href="#" class="flex flex-wrap no-underline hover:no-underline">
-          <p class="w-full text-gray-medium text-xs md:text-sm px-6">xGETTING STARTED</p>
-          <div class="w-full font-bold text-xl text-gray-darker px-6">Lorem ipsum dolor sit amet.</div>
-          <p class="text-gray-darker text-base px-6 mb-5">
+          <p class="w-full px-6 text-xs text-gray-medium md:text-sm">xGETTING STARTED</p>
+          <div class="w-full px-6 text-xl font-bold text-gray-darker">Lorem ipsum dolor sit amet.</div>
+          <p class="px-6 mb-5 text-base text-gray-darker">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam at ipsum eu nunc commodo posuere et sit amet ligula. 
           </p>
         </a>
       </div>
-      <div class="flex-none mt-auto bg-white rounded-b rounded-t-none overflow-hidden shadow p-6">
+      <div class="flex-none p-6 mt-auto overflow-hidden bg-white rounded-t-none rounded-b shadow">
         <div class="flex items-center justify-end">
-          <button class="mx-auto lg:mx-0 hover:underline gradient text-white font-bold rounded-full my-6 py-4 px-8 shadow-lg">Action</button>
+          <button class="px-8 py-4 mx-auto my-6 font-bold text-white rounded-full shadow-lg lg:mx-0 hover:underline gradient">Action</button>
         </div>
       </div>
     </div>
   </div>
 </section>
-<section class="bg-gray-lighter py-8">
-  <div class="container mx-auto px-2 pt-4 pb-12 text-gray-darker">
+<section class="py-8 bg-gray-lighter">
+  <div class="container px-2 pt-4 pb-12 mx-auto text-gray-darker">
     <h1 class="w-full my-2 text-5xl font-bold leading-tight text-center text-gray-darker">Pricing</h1>
     <div class="w-full mb-4">	
-      <div class="h-1 mx-auto gradient w-64 opacity-25 my-0 py-0 rounded-t"></div>
+      <div class="w-64 h-1 py-0 mx-auto my-0 rounded-t opacity-25 gradient"></div>
     </div>
-    <div class="flex flex-col sm:flex-row justify-center pt-12 my-12 sm:my-4">
-      <div class="flex flex-col w-5/6 lg:w-1/4 mx-auto lg:mx-0 rounded-none lg:rounded-l-lg bg-white mt-4">
-        <div class="flex-1 bg-white text-gray-medium rounded-t rounded-b-none overflow-hidden shadow">
+    <div class="flex flex-col justify-center pt-12 my-12 sm:flex-row sm:my-4">
+      <div class="flex flex-col w-5/6 mx-auto mt-4 bg-white rounded-none lg:w-1/4 lg:mx-0 lg:rounded-l-lg">
+        <div class="flex-1 overflow-hidden bg-white rounded-t rounded-b-none shadow text-gray-medium">
           <div class="p-8 text-3xl font-bold text-center border-b-4">Free</div>
-          <ul class="w-full text-center text-sm">
-            <li class="border-b py-4">Thing</li>
-            <li class="border-b py-4">Thing</li>
-            <li class="border-b py-4">Thing</li>
+          <ul class="w-full text-sm text-center">
+            <li class="py-4 border-b">Thing</li>
+            <li class="py-4 border-b">Thing</li>
+            <li class="py-4 border-b">Thing</li>
           </ul>
         </div>
-        <div class="flex-none mt-auto bg-white rounded-b rounded-t-none overflow-hidden shadow p-6">
-          <div class="w-full pt-6 text-3xl text-gray-medium font-bold text-center">£0 <span class="text-base">for one user</span></div>
+        <div class="flex-none p-6 mt-auto overflow-hidden bg-white rounded-t-none rounded-b shadow">
+          <div class="w-full pt-6 text-3xl font-bold text-center text-gray-medium">£0 <span class="text-base">for one user</span></div>
           <div class="flex items-center justify-center">
-            <button class="mx-auto lg:mx-0 hover:underline gradient text-white font-bold rounded-full my-6 py-4 px-8 shadow-lg">Sign Up</button>
+            <button class="px-8 py-4 mx-auto my-6 font-bold text-white rounded-full shadow-lg lg:mx-0 hover:underline gradient">Sign Up</button>
           </div>
         </div>
       </div>
-      <div class="flex flex-col w-5/6 lg:w-1/3 mx-auto lg:mx-0 rounded-lg bg-white mt-4 sm:-mt-6 shadow-lg z-10">
-        <div class="flex-1 bg-white rounded-t rounded-b-none overflow-hidden shadow">
+      <div class="z-10 flex flex-col w-5/6 mx-auto mt-4 bg-white rounded-lg shadow-lg lg:w-1/3 lg:mx-0 sm:-mt-6">
+        <div class="flex-1 overflow-hidden bg-white rounded-t rounded-b-none shadow">
           <div class="w-full p-8 text-3xl font-bold text-center">Basic</div>
-          <div class="h-1 w-full gradient my-0 py-0 rounded-t"></div>
-          <ul class="w-full text-center text-base font-bold">
-            <li class="border-b py-4">Thing</li>
-            <li class="border-b py-4">Thing</li>
-            <li class="border-b py-4">Thing</li>
-            <li class="border-b py-4">Thing</li>
+          <div class="w-full h-1 py-0 my-0 rounded-t gradient"></div>
+          <ul class="w-full text-base font-bold text-center">
+            <li class="py-4 border-b">Thing</li>
+            <li class="py-4 border-b">Thing</li>
+            <li class="py-4 border-b">Thing</li>
+            <li class="py-4 border-b">Thing</li>
           </ul>					
         </div>
-        <div class="flex-none mt-auto bg-white rounded-b rounded-t-none overflow-hidden shadow p-6">
+        <div class="flex-none p-6 mt-auto overflow-hidden bg-white rounded-t-none rounded-b shadow">
           <div class="w-full pt-6 text-4xl font-bold text-center">£x.99 <span class="text-base">/ per user</span></div>
           <div class="flex items-center justify-center">
-            <button class="mx-auto lg:mx-0 hover:underline gradient text-white font-bold rounded-full my-6 py-4 px-8 shadow-lg">Sign Up</button>
+            <button class="px-8 py-4 mx-auto my-6 font-bold text-white rounded-full shadow-lg lg:mx-0 hover:underline gradient">Sign Up</button>
           </div>
         </div>
       </div>
-      <div class="flex flex-col w-5/6 lg:w-1/4 mx-auto lg:mx-0 rounded-none lg:rounded-l-lg bg-white mt-4">
-        <div class="flex-1 bg-white text-gray-medium rounded-t rounded-b-none overflow-hidden shadow">
+      <div class="flex flex-col w-5/6 mx-auto mt-4 bg-white rounded-none lg:w-1/4 lg:mx-0 lg:rounded-l-lg">
+        <div class="flex-1 overflow-hidden bg-white rounded-t rounded-b-none shadow text-gray-medium">
           <div class="p-8 text-3xl font-bold text-center border-b-4">Pro</div>
-          <ul class="w-full text-center text-sm">
-            <li class="border-b py-4">Thing</li>
-            <li class="border-b py-4">Thing</li>
-            <li class="border-b py-4">Thing</li>
+          <ul class="w-full text-sm text-center">
+            <li class="py-4 border-b">Thing</li>
+            <li class="py-4 border-b">Thing</li>
+            <li class="py-4 border-b">Thing</li>
           </ul>
         </div>
-        <div class="flex-none mt-auto bg-white rounded-b rounded-t-none overflow-hidden shadow p-6">
-          <div class="font-bold pt-6 text-3xl text-center text-gray-medium w-full">£x.99 <span class="text-base">/ per user</span></div>
+        <div class="flex-none p-6 mt-auto overflow-hidden bg-white rounded-t-none rounded-b shadow">
+          <div class="w-full pt-6 text-3xl font-bold text-center text-gray-medium">£x.99 <span class="text-base">/ per user</span></div>
           <div class="flex items-center justify-center">
-            <button class="font-bold gradient hover:underline lg:mx-0 mx-auto my-6 px-8 py-4 rounded-full shadow-lg text-white">Sign Up</button>
+            <button class="px-8 py-4 mx-auto my-6 font-bold text-white rounded-full shadow-lg gradient hover:underline lg:mx-0">Sign Up</button>
           </div>
         </div>
       </div>
@@ -215,11 +219,15 @@
   </g>
   </g>
 </svg>
-<section class="container mb-12 mx-auto py-6 text-center">
-  <h1 class="font-bold leading-tight my-2 text-5xl text-center text-white w-full"><%= gettext("Start using today") %></h1>
-  <div class="mb-4 w-full">	
-    <div class="bg-white h-1 mx-auto my-0 opacity-25 py-0 rounded-t w-1/6"></div>
+<section class="container py-6 mx-auto mb-12 text-center">
+  <h1 class="w-full my-2 text-5xl font-bold leading-tight text-center text-white"><%= gettext("Start using today") %></h1>
+  <div class="w-full mb-4">	
+    <div class="w-1/6 h-1 py-0 mx-auto my-0 bg-white rounded-t opacity-25"></div>
   </div>
-  <h3 class="leading-tight my-4 text-3xl"><%= gettext("And feel the benefits") %></h3>	
-  <button class="bg-white font-bold hover:underline lg:mx-0 mx-auto my-6 px-8 py-4 rounded-full shadow-lg text-gray-darker">Action!</button>
+  <h3 class="my-4 text-3xl leading-tight"><%= gettext("And feel the benefits") %></h3>	
+  <%= link to: Routes.pow_registration_path(@conn, :new) do %>
+    <button class="px-8 py-4 mx-auto my-6 font-bold bg-white rounded-full shadow-lg hover:underline lg:mx-0 text-gray-darker">
+      <%= gettext("Sign up") %>
+    </button>
+  <% end %>
 </section>
