--- a/lib/web/templates/layout/components/flash.html.eex
+++ b/lib/web/templates/layout/components/flash.html.eex
@@ -1,9 +1,21 @@
-<div class="fixed top-0 right-0 w-5/6 max-w-sm m-8 mt-16 alert-toast bg-cta-dark md:w-full">
-  <input type="checkbox" class="hidden" id="footertoast">
-  <label class="close text-cta-light cursor-pointer flex items-start justify-between w-full p-2 bg-<%= @type %>-medium h-24 rounded shadow-lg text-white" title="close" for="footertoast">
+<div x-data="{isOpen: false}" 
+     x-show="isOpen"
+     x-init="setTimeout(() => {isOpen = true;},500)"
+     class="m-8 mt-4 mr-4 overflow-hidden"
+     >
+  <div class="flex items-start justify-between w-full h-full p-2 border-4 border-black rounded shadow-lg cursor-pointer bg-primary-medium close" title="close">
     <%= @message %>
-    <svg class="fill-current text-secondary-dark" xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18">
+    <%= @type %>
+    <svg @click="isOpen = false"
+      class="fill-current text-secondary-dark"
+      xmlns="http://www.w3.org/2000/svg"
+      width="18"
+      height="18"
+      viewBox="0 0 18 18">
       <path d="M14.53 4.53l-1.06-1.06L9 7.94 4.53 3.47 3.47 4.53 7.94 9l-4.47 4.47 1.06 1.06L9 10.06l4.47 4.47 1.06-1.06L10.06 9z"></path>
     </svg>
-  </label>
+  </div>
 </div>
+<style>
+  [x-cloak] { display: none; }
+</style>
