--- a/lib/web/templates/page/demo.html.eex
+++ b/lib/web/templates/page/demo.html.eex
@@ -1,24 +1,37 @@
 <div class="flex flex-wrap content-center flex-1 w-full max-w-6xl pt-16 mx-auto">
-  <br><%= gettext("general") %>
-  <br><%= gettext("electrical") %>
-  <br><%= gettext("heights") %>
-  <br><%= gettext("hot_work") %>
-  <br><%= gettext("confined_space") %>
-  <br><%= gettext("hot_fluid") %>
-  <br><%= gettext("gas") %>
-  <br><%= gettext("ear_protection") %>
-  <br><%= gettext("earth_terminal") %>
-  <br><%= gettext("eye_protection") %>
-  <br><%= gettext("face_shield") %>
-  <br><%= gettext("foot_protection") %>
-  <br><%= gettext("head_protection") %>
-  <br><%= gettext("high_visibility_clothing") %>
-  <br><%= gettext("dust_mask") %>
-  <br><%= gettext("protective_clothing") %>
-  <br><%= gettext("protective_gloves") %>
-  <br><%= gettext("safety_harness") %>
-  <br><%= gettext("welding_mask") %>
-  <%= for iso <- Enum.sort(Map.keys(Workpermit.IsoSymbols.to_iso_code_mapping())) do %>
+<br><%= gettext("general") %>
+<br><%= gettext("electrical") %>
+<br><%= gettext("heights") %>
+<br><%= gettext("hot_work") %>
+<br><%= gettext("confined_space") %>
+<br><%= gettext("hot_fluid") %>
+<br><%= gettext("gas") %>
+<br><%= gettext("ear_protection") %>
+<br><%= gettext("earth_terminal") %>
+<br><%= gettext("eye_protection") %>
+<br><%= gettext("face_shield") %>
+<br><%= gettext("foot_protection") %>
+<br><%= gettext("head_protection") %>
+<br><%= gettext("high_visibility_clothing") %>
+<br><%= gettext("dust_mask") %>
+<br><%= gettext("protective_clothing") %>
+<br><%= gettext("protective_gloves") %>
+<br><%= gettext("safety_harness") %>
+<br><%= gettext("welding_mask") %>
+
+<br><%= gettext("Wear ear protection") %>
+<br><%= gettext("Connect an earth terminal to the ground") %>
+<br><%= gettext("Wear eye protection") %>
+<br><%= gettext("Wear a face shield") %>
+<br><%= gettext("Wear foot protection") %>
+<br><%= gettext("Wear head protection") %>
+<br><%= gettext("Wear high visibility clothing") %>
+<br><%= gettext("Wear a dust mask") %>
+<br><%= gettext("Wear protective clothing") %>
+<br><%= gettext("Wear protective gloves") %>
+<br><%= gettext("Wear a safety harness") %>
+<br><%= gettext("Wear a welding mask") %>
+<%= for iso <- Enum.sort(Map.keys(Workpermit.IsoSymbols.to_iso_code_mapping())) do %> %>
     <div class="max-w-xs m-4 overflow-hidden rounded shadow-lg bg-secondary-medium ">
       <img class="w-full" src=" <%= Workpermit.IsoSymbols.to_image_path(iso) %> " alt="<%= iso %>">
       <div class="px-6 py-4">
