--- a/lib/web/templates/permit/live_form.html.leex
+++ b/lib/web/templates/permit/live_form.html.leex
@@ -1,146 +1,134 @@
-<div class="content-center flex-1 w-full max-w-lg pt-16 mx-auto">
+<div id="permitForm" class="content-center flex-1 w-full max-w-lg pt-16 mx-auto">
   <h1 class="p-5 c-h3 text-gray-darker"><%= gettext("Create permit") %></h1>
   <%= f = form_for @changeset, "#", [phx_change: :validate, phx_submit: :save] %>
+
+  <!-- error message -->
   <%= if @changeset.action do %>
     <div class="alert alert-danger">
       <p><%= gettext("Oops, something went wrong! Please check the errors below")%></p>
+      <p><%= @changeset.action %></p>
+      <p><%= @current_step %></p>
     </div>
   <% end %>
-    <div id="category" class="block tab text-gray-darker <%= unless @current_step == 1, do: "hidden" %> ">
-      <h2 class="mb-8 c-h3 ">
-        <%= gettext("Category") %>
-      </h2>
 
-      <%= label f, :category, class: "block mb-6 c-h5" %>
-      <span class="block form-label"><%= gettext("Category") %></span>
-      <div class="relative inline-block w-full">
-        <%= select f, :category, @categories, selected: @choosen_category.selected, class: "form-input w-full mt-1 block appearance-none" %>
-        <div class="absolute inset-y-0 right-0 flex items-center px-2 pointer-events-none">
-          <svg class="w-4 h-4 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z"/></svg>
-        </div>
-      </div>
-      <%= error_tag f, :category %>
-      <%= img_tag @choosen_category.image, id: "choosen_category_image" %>
-      <%= label f, :number, class: "block my-6 c-h5" do %>
-        <span class="block form-label"><%= gettext("Number") %></span>
-        <%= number_input f, :number, value: @choosen_category.next_number, class: "form-input w-full mt-1" %>
-        <%= error_tag f, :number %>
-      <% end %>
-      <div  class="flex justify-between">
-        <div>
-          <%= label f, :lone_working, class: "block font-bold" do %>
-            <%= checkbox f, :lone_working, class: "leading-tight mt-1" %>
-            <span class="text-sm"><%= gettext("Lone working") %></span>
-          <% end %>
-        </div>
-        <div>
-          <%= label f, :coshh, class: "block font-bold" do %>
-            <%= checkbox f, :coshh, class: "leading-tight mt-1" %>
-            <span class="text-sm"><%= gettext("COSHH") %></span>
-          <% end %>
-        </div>
-      </div>
-    </div>
-    <div id="actors" class="tab text-gray-darker <%= unless @current_step == 2, do: "hidden" %> ">
-      <h2 class="mb-8 c-h4 ">
-        <%= gettext("Actors") %>
-      </h2>
-      <div>
-        <%= label f, :issuer_name, class: "block mb-6 c-h5" do %>
-          <span class="block form-label"><%= gettext("Issuer") %></span>
-          <%= text_input f, :issuer_name, value: full_name(@current_user), class: "form-input w-full mt-1" %>
-          <%= error_tag f, :issuer_name %>
-        <% end %>
-      </div>
+  <!-- category page -->
+  <div id="category" class="block text-gray-darker <%= unless @current_step == 1, do: "hidden" %> ">
+    <h2 class="mb-8 c-h3 ">
+      <%= gettext("Category") %>
+    </h2>
 
-      <div>
-        <%= label f, :performer_name, class: "block mb-6 c-h5" do %>
-          <span class="block form-label"><%= gettext("Performer") %></span>
-          <%= text_input f, :performer_name, class: "form-input w-full mt-1" %>
-          <%= error_tag f, :performer_name %>
-        <% end %>
-      </div>
-
-      <div>
-        <%= label f, :firewatch_name, class: "block mb-6 c-h5 hidden" do %>
-          <span class="block form-label"><%= gettext("Firewatch") %></span>
-          <%= text_input f, :firewatch_name, class: "form-input w-full mt-1" %>
-          <%= error_tag f, :firewatch_name %>
-        <% end %>
-      </div>
-
-      <div>
-        <%= label f, :controller_name, class: "block mb-6 c-h5 hidden" do %>
-          <span class="block form-label"><%= gettext("Controller") %></span>
-          <%= text_input f, :controller_name, class: "form-input w-full mt-1" %>
-          <%= error_tag f, :controller_name %>
-        <% end %>
-      </div>
-    </div>
-    <div id="time" class="tab text-gray-darker <%= unless @current_step == 3, do: "hidden" %> ">
-      <h2 class="mb-8 c-h4 ">
-        <%= gettext("Time") %>
-      </h2>
-      <%= label f, :start_time, class: "block mb-6 c-h6" do %>
-        <span class="block mb-2 form-label c-h5"><%= gettext("Start Time") %></span>
-        <%= error_tag f, :start_time %>
-        <div class="flex two four-500 six-800">
-          <%= permit_datetime_select f, :start_time, class: "form-input w-full mt-1 c-h6" %>
-        </div>
-      <% end %>
-
-      <%= label f, :finish_time, class: "block mb-6 c-h6" do %>
-        <span class="block mb-2 form-label c-h5"><%= gettext("Finish Time") %></span>
-        <%= error_tag f, :finish_time %>
-        <div class="flex two four-500 six-800">
-          <%= permit_datetime_select f, :finish_time, class: "form-input w-full mt-1" %>
-        </div>
-      <% end %>
-    </div>
-    <div id="pe" class="tab <%= unless @current_step == 4, do: "hidden" %> ">
-      <h2 class="mb-8 c-h4 ">
-        <%= gettext("Protective Equipment") %>
-      </h2>
-      <ul>
-        <%=  for pe <- @pe do %>
+    <div>
+      <%=  for category <- @categories do %>
+        <ul>
           <li>
-            <input type="checkbox" 
-                   name="permit[protective_equipment][]"
-                   value="<%= pe %>"
-                   id="pe_<%= pe %>"
-                   class=""
-                   >
-                   <label for="pe_<%= pe %>">
-                     <%= img_tag( Workpermit.IsoSymbols.to_image_path(pe)) %>
-                     <%= gettext_category(iso_meaning(pe)) %>
-                   </label>
+            <%= radio_button f, :category, category %>
+            <%= label f, "category_" <> Atom.to_string(category) do %>
+              <%= img_tag( iso_image_category(category)) %>
+              <%= gettext_category(iso_meaning(category)) %>
+            <% end %>
           </li>
-        <% end %>
-      </ul>
-    </div>
-  <div id="info" class="tab text-gray-darker <%= unless @current_step == 5, do: "hidden" %> ">
-      <h2 class="mb-8 c-h4 ">
-        <%= gettext("Additional Info") %>
-      </h2>
-      <div>
-        <%= label f, :precautions, class: "block mb-6" do %>
-          <div  class="flex justify-between">
-            <span class="block form-label c-h5"><%= gettext("Precautions") %></span>
-            <p id="precautions_add_checkbox" class="px-2 py-1 bg-transparent border rounded cursor-pointer text-small text-gray-darker border-gray-dark ">Insert □</p>
-          </div>
-          <%= textarea f, :precautions, value: {:safe, prec}, class: "form-input w-full mt-1 h-64" %>
-          <%= error_tag f, :precautions %>
-        <% end %>
-      </div>
-      <div>
-        <%= label f, :additional_info, class: "block mb-6" do %>
-          <span class="block form-label c-h5"><%= gettext("Additional Info") %></span>
-          <%= textarea f, :additional_info, class: "form-input w-full mt-1 h-32" %>
-          <%= error_tag f, :additional_info %>
-        <% end %>
-      </div>
+        </ul>
+      <% end %>
     </div>
 
+    <div  class="flex justify-between">
+      <%=  for cb <- ~w(lone_working coshh)a  do %>
+        <div>
+          <%= label f, cb, class: "block font-bold" do %>
+            <%= checkbox f, cb, class: "leading-tight mt-1" %>
+            <span class="text-sm"><%= gettext_category(cb) %></span>
+          <% end %>
+        </div>
+      <% end %>
+    </div>
+  </div>
+
+  <!-- actors page -->
+  <div id="actors" class="text-gray-darker <%= unless @current_step == 2, do: "hidden" %> ">
+    <h2 class="mb-8 c-h4 ">
+      <%= gettext("Actors") %>
+    </h2>
+
+    <%=  for actor <- ~w(issuer_name performer_name firewatch_name contact_name)a do %>
+      <div>
+        <%= label f, actor, class: "block mb-6 c-h5" do %>
+          <span class="block form-label"><%= gettext_category(actor) %></span>
+          <%= text_input f, actor, class: "form-input w-full mt-1", list: "#{actor}_list" %>
+          <datalist id="<%= actor %>_list">
+            <%= for match <- ~W(ar rs rrcv rcddd) do %>
+              <option value="<%= match %>"><%= match %></option>
+            <% end %>
+          </datalist>
+          <%= error_tag f, actor %>
+        <% end %>
+      </div>
+    <% end %>
+  </div>
+
+  <!-- time page -->
+  <div id="time" class="text-gray-darker <%= unless @current_step == 3, do: "hidden" %> ">
+    <h2 class="mb-8 c-h4 ">
+      <%= gettext("Time") %>
+    </h2>
+    <%=  for time <- ~w(start_time finish_time)a do %>
+      <%= label f, time, class: "block mb-6 c-h6" do %>
+        <span class="block mb-2 form-label c-h5"><%= gettext_category(time) %></span>
+        <%= error_tag f, time %>
+        <div class="flex two four-500 six-800">
+          <%= permit_datetime_select f, time, class: "form-input w-full mt-1 c-h6" %>
+        </div>
+      <% end %>
+    <% end %>
+  </div>
+
+  <!-- protective equipment page -->
+  <div id="pe" class="<%= unless @current_step == 4, do: "hidden" %> ">
+    <h2 class="mb-8 c-h4 ">
+      <%= gettext("Protective Equipment") %>
+    </h2>
+    <ul>
+      <%=  for pe <- @pe do %>
+        <li>
+          <input type="checkbox" 
+                 name="permit[protective_equipment][]"
+                 value="<%= pe %>"
+                 id="pe_<%= pe %>"
+                 class=""
+                 >
+                 <label for="pe_<%= pe %>">
+                   <%= img_tag( Workpermit.IsoSymbols.to_image_path(pe)) %>
+                   <%= gettext_category(iso_meaning(pe)) %>
+                 </label>
+        </li>
+      <% end %>
+    </ul>
+  </div>
+
+  <!--other precautions page -->
+  <div id="info" class="text-gray-darker <%= unless @current_step == 5, do: "hidden" %> ">
+    <h2 class="mb-8 c-h4 ">
+      <%= gettext("Additional Info") %>
+    </h2>
+    <div>
+      <%= label f, :precautions, class: "block mb-6" do %>
+        <div  class="flex justify-between">
+          <span class="block form-label c-h5"><%= gettext("Precautions") %></span>
+          <p id="precautions_add_checkbox" class="px-2 py-1 bg-transparent border rounded cursor-pointer text-small text-gray-darker border-gray-dark ">Insert □</p>
+        </div>
+        <%= textarea f, :precautions, value: {:safe, prec}, class: "form-input w-full mt-1 h-64" %>
+        <%= error_tag f, :precautions %>
+      <% end %>
+    </div>
+    <div>
+      <%= label f, :additional_info, class: "block mb-6" do %>
+        <span class="block form-label c-h5"><%= gettext("Additional Info") %></span>
+        <%= textarea f, :additional_info, class: "form-input w-full mt-1 h-32" %>
+        <%= error_tag f, :additional_info %>
+      <% end %>
+    </div>
+  </div>
+
+  <!--prev/next buttons page -->
   <div  class="flex justify-between">
     <button phx-click="prev-step"
             type="button"
